implement create match handler
